--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 Hello! I'm Ayokunle Olugboyo, a recent Computer Science graduate from the University of Illinois - Chicago, passionate about software engineering and always ready to tackle challenging projects and solving problems. 
                 My last year of High School provided a deep dive into the world of coding, igniting my passion for software development. 
                 In my college years, I was able to learn and explore my passions to solve problems in creative ways.
-                During the time I do not code, I enjoy working out, listening to songs, handing out with family, learning new technology tools and just watch TV.
+                During the time I do not code, I enjoy working out, listening to songs, hanging out with friends and family, learning new technology tools and just watch TV.
             </p>
             <h2>Professional Experience</h2>
             <p>
@@ -33,13 +33,24 @@
                 Chicago, IL<br/>
                 August 2022 – December 2022<br/>
                 <ul>
-                    <li>Utilized Django and Google Maps API to calculate walking distances between two coordinates for optimal charger
-                        placement</li>
-                    <li>Created docker image for the project which increased development efficiency by 25 percent</li>
-                    <li>Created and managed a MySQL Server database to store data on streetlights collected from the city of Chicago’s API for
-                        simulated testing by developing ETL Pipelines.</li>
-                    <li>Developed Object-Oriented Models for efficient database management and migration.</li>
-                    <li>Integrated the database with the backend code to enable efficient data processing.</li>
+                    <li>Created docker image for the project which increased development efficiency by 25 percent.</li>
+                    <li>Created and managed a MySQL Server database to store data on streetlights for testing</li>
+                    <li>Devised and implemented a Python algorithm to simulate and record precise streetlight counts of over 200 and optimal
+                        placement on over 6 streets, efficiently storing the data in a centralized database for testing purposes.</li>
+                    <li>Developed ORM for efficient database management and integration to the backend.</li>
+                </ul>
+            </p>
+
+
+            <h2>Notable Projects</h2>
+            <p>
+                <span class="company-name">Chat App</span><br/>
+                <b>Java, Eclipse, Maven, JavaFx</b><br/>
+                January 2022<br/>
+                <ul>
+                    <li>Developed a Chat App in Java using Maven, allowing Server-Client communication.</li>
+                    <li>Utilized Java Threads to facilitate multiple-client messaging capabilities.</li>
+                    <li>Demonstrated proficiency in network programming and software engineering principles.</li>
                 </ul>
             </p>
 
