--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
                     <li>Demonstrated proficiency in network programming and software engineering principles.</li>
                 </ul>
             </p>
+            <p>
+                <span class="company-name">Route Tracker</span><br/>
+                <b>Python, SQL</b><br/>
+                January 2022<br/>
+                <ul>
+                    <li>Created a backend application to present CTA (Chicago Transit Authority) train data to customers</li>
+                    <li>Used Python and SQL queries to pull data from a database and then aggregate data to display to the user</li>
+                </ul>
+            </p>
+            <p>
+                <span class="company-name">3 Men Morris</span><br/>
+                <b>Java, Android Studio</b><br/>
+                February 2023<br/>
+                <ul>
+                    <li>Designed and developed the strategy game called Three Men Morris (TMM) into an app for Android devices using Java</li>
+                    <li>Implemented two Java worker threads with different algorithms to play against each other while the UI thread updates
+                        the display and manages the game.</li>
+                    <li>Utilized handlers, job queues, and loopers to facilitate communication between the three threads involved in the game.
+                    </li>
+                </ul>
+            </p>
 
 
             <h2>Technical Skills</h2>
