--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <span class="company-name">Chat App</span><br/>
                 <b>Java, Eclipse, Maven, JavaFx</b><br/>
                 January 2022<br/>
+                <a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a><br/>
                 <ul>
                     <li>Developed a Chat App in Java using Maven, allowing Server-Client communication.</li>
                     <li>Utilized Java Threads to facilitate multiple-client messaging capabilities.</li>
@@ -58,8 +59,8 @@
                 <b>Python, SQL</b><br/>
                 January 2022<br/>
                 <ul>
-                    <li>Created a backend application to present CTA (Chicago Transit Authority) train data to customers</li>
-                    <li>Used Python and SQL queries to pull data from a database and then aggregate data to display to the user</li>
+                    <li>Created a backend application to present CTA (Chicago Transit Authority) train data to users</li>
+                    <li>Used Python and SQL queries to pull data from a database and then analyze data to display to the user</li>
                 </ul>
             </p>
             <p>
