--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <p>
                 <span class="company-name">Chat App</span><br/>
                 <b>Java, Eclipse, Maven, JavaFx</b><br/>
-                January 2022<br/>
-                <a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a><br/>
+                January 2022<a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a><br/>
+                <!-- <a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a><br/> -->
                 <ul>
                     <li>Developed a Chat App in Java using Maven, allowing Server-Client communication.</li>
                     <li>Utilized Java Threads to facilitate multiple-client messaging capabilities.</li>
