--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>
                 <span class="company-name">Chat App</span><br/>
                 <b>Java, Eclipse, Maven, JavaFx</b><br/>
-                January 2022<a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a><br/>
+                January 2022<a href="https://github.com/Ayo380/Chat-App"><i class="fab fa-github"></i></a><br/>
                 <!-- <a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a><br/> -->
                 <ul>
                     <li>Developed a Chat App in Java using Maven, allowing Server-Client communication.</li>
@@ -57,7 +57,7 @@
             <p>
                 <span class="company-name">Route Tracker</span><br/>
                 <b>Python, SQL</b><br/>
-                January 2022<br/>
+                January 2022</i></a><br/>
                 <ul>
                     <li>Created a backend application to present CTA (Chicago Transit Authority) train data to users</li>
                     <li>Used Python and SQL queries to pull data from a database and then analyze data to display to the user</li>
@@ -66,7 +66,7 @@
             <p>
                 <span class="company-name">3 Men Morris</span><br/>
                 <b>Java, Android Studio</b><br/>
-                February 2023<br/>
+                February 2023<a href="https://github.com/Ayo380/3_Men_Morris"><i class="fab fa-github"></i></a><br/>
                 <ul>
                     <li>Designed and developed the strategy game called Three Men Morris (TMM) into an app for Android devices using Java</li>
                     <li>Implemented two Java worker threads with different algorithms to play against each other while the UI thread updates
