--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Chicago, Illinois</p>
             <a href="https://www.linkedin.com/in/ayokunleolugboyo/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Ayo380"><i class="fab fa-github"></i></a>
-            <a href="https://github.com/Ayo380"><i>resume</i></a>
+            <a href="https://drive.google.com/drive/folders/1xxsKo6fJdLg2Qyf3PyFORJSY66aOW9U_?usp=sharing"><p>resume</p></a>
         </div>
         <div class="section-2">
             <h2>About Me</h2>
