--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
             </p>
             <h2>Professional Experience</h2>
             <p>
+                <span class="company-name">UnitedHealth Group</span><br/>
+                <b>Configuration Data Analyst(SQL production support Specialist)</b><br/>
+                Remote, IL<br/>
+                June 2023 – Present <br/>
+                <ul>
+                    <li>Collaborated with multiple teams to retrieve essential data from the database by developing queries on MS SQL.</li>
+                    <li>Demonstrated expertise in SQL query writing, facilitating efficient data extraction and manipulation for various departments</li>
+                    <li>Reprocessed over 1000 claims in MS SQL database with the use of stored procedures, enhancing backend functionality and ensuring data accuracy.</li>
+                </ul>
+            </p>
+
+            <p>
                 <span class="company-name">Discovery Partner Institute 
                     (DPI) NetZero Sustainable Infrastructure</span><br/>
                 <b>Software Research Intern</b><br/>
