--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
 
 
-            <h2>Notable Projects</h2>
+            <h2>Notable Projects<p>(More projects in my Github)</p></h2>
             <p>
                 <span class="company-name">Chat App</span><br/>
                 <b>Java, Eclipse, Maven, JavaFx</b><br/>
